Build problems solved
Squashed commit of the following:

commit aa2a3896ee6aa79fc47e6a87f5bb143af29fa63c
Author: Maximiliano Bottazzi <maxidigital@gmail.com>
Date:   Mon Nov 16 17:44:23 2020 +0100

    Update

commit 220e17b9f1fed17ccd5e815a9b2ce6b4fd1198ff
Author: Maximiliano Bottazzi <maxidigital@gmail.com>
Date:   Mon Nov 16 17:41:49 2020 +0100

    Update

commit 1ca606cfe7625bd9c65a6a2dfa7dab062b786f98
Author: Maximiliano Bottazzi <maxidigital@gmail.com>
Date:   Mon Nov 16 17:08:13 2020 +0100

    Update

commit 454e3f4300f8e36e795f400cb93e129ae8c999e2
Author: Maximiliano Bottazzi <maxidigital@gmail.com>
Date:   Mon Nov 16 16:41:17 2020 +0100

    Update

commit aa3b0f930e97f7694762dda1cac238822dc6e793
Author: Maximiliano Bottazzi <maxidigital@gmail.com>
Date:   Mon Nov 16 16:21:51 2020 +0100

    Test

commit c5eb8325d51423d8e6856bdd6927888927eb24f1
Author: Maximiliano Bottazzi <maxidigital@gmail.com>
Date:   Mon Nov 16 14:44:44 2020 +0100

    Bug fixed

commit 1f191f0cd3795c71d1c81048f2d24c762feda5f5
Author: Maximiliano Bottazzi <maxidigital@gmail.com>
Date:   Mon Nov 16 14:34:51 2020 +0100

    New parent pom structure

commit e14b7949db1805fecf66f09be16a94532664693f
Author: Maximiliano Bottazzi <maxidigital@gmail.com>
Date:   Thu Nov 12 12:16:41 2020 +0100

    Update